--- a/StormWeb/Views/Account/LogOn.cshtml
+++ b/StormWeb/Views/Account/LogOn.cshtml
@@ -60,9 +60,8 @@
                         </a>
                     </div>
                 </div>
-                <ul class="nav pull-right"> 
-                    @*<li><a href="@Url.Action("Page","Site")"><i class="icon-share-alt icon-white"></i>Go to Main Site</a></li>*@
-                    <li><a href="http://www.stormedu.com.au" target="_blank"><i class="icon-share-alt icon-white"></i>Go to Main Site</a></li>
+                <ul class="nav pull-right">
+                    <li><a href="@Url.Action("Page","Site")"><i class="icon-share-alt icon-white"></i>Go to Main Site</a></li>
                 </ul>
             </div>
         </div>
