--- a/StormWeb/Views/Resume/Edit.cshtml
+++ b/StormWeb/Views/Resume/Edit.cshtml
@@ -4,7 +4,7 @@
 }
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-@using (Html.BeginForm("Edit", "Resume", FormMethod.Post, new { id = "ResumeForm" }))
+@using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
     @Html.HiddenFor(model => model.Resume_Id)
@@ -25,186 +25,114 @@
                             @Html.Label("Given Name", null, new { @class = "control-label form-required" })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.GivenName, new { @class = "input-large text-tip", placeholder = " Given Name" })
-                                 <span id="spErrorMessageGivenName" class="error" style="display: none;">* Please Enter
-                                    Your Given Name</span>
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.GivenName)
+                                </p>
                             </div>
                         </div>
                         <div class="control-group">
                             @Html.Label("LastName", null, new { @class = "control-label form-required" })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.LastName, new { @class = "input-large text-tip", placeholder = " Last Name" })
-                                 <span id="spErrorMessageLastName" class="error" style="display: none;">* Please Enter
-                                    Your Last Name</span>
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.LastName)
+                                </p>
                             </div>
                         </div>
                         <div class="control-group">
                             @Html.Label(" Street Name and Number", null, new { @class = "control-label form-required", style = "width:200px;margin-left: -60px;" })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.Address.Address_Name, new { @class = "input-large text-tip", placeholder = " Street Name and Number" })
-                                 <span id="spErrorMessageAddressName" class="error" style="display: none;">* Please Enter
-                                    Your Street Name and Number</span>
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Address.Address_Name)
+                                </p>
                             </div>
                         </div>
                         <div class="control-group">
                             @Html.Label("City", null, new { @class = "control-label form-required" })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.Address.City, new { @class = "input-large text-tip", placeholder = "City" })
-                                 <span id="spErrorMessageCity" class="error" style="display: none;">* Please Enter Your
-                                    City</span>
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Address.City)
+                                </p>
                             </div>
                         </div>
                         <div class="control-group">
                             @Html.Label("State", null, new { @class = "control-label form-required" })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.Address.State, new { @class = "input-large text-tip", placeholder = "State" })
-                                <span id="spErrorMessageState" class="error" style="display: none;">* Please Enter Your
-                                    State</span>
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Address.State)
+                                </p>
                             </div>
                         </div>
                         <div class="control-group">
                             @Html.Label("Zipcode", null, new { @class = "control-label form-required" })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.Address.Zipcode, new { @class = "input-large text-tip", placeholder = "Zipcode" })
-                                <span id="spErrorMessageZipcode" class="error" style="display: none;">* Please Enter
-                                    Your Zipcode</span>
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Address.Zipcode)
+                                </p>
                             </div>
                         </div>
                         <div class="control-group">
                             @Html.Label("Country", null, new { @class = "control-label form-required" })
                             <div class="controls">
-                                @Html.DropDownListFor(model => model.Address.Country_Id, (IEnumerable<SelectListItem>)ViewBag.CountryList, "--Select--", new { @class = "chzn-select" })
-                                <span id="spErrorMessageCountry" class="error" style="display: none;">* Please Select
-                                    Your Country</span>
+                              @Html.DropDownListFor(model => model.Address.Country_Id, (IEnumerable<SelectListItem>)ViewBag.CountryList, "--Select--", new { @class = "chzn-select" })
+                      
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Address.Country_Id)
+                                </p>
                             </div>
                         </div>
-                        <div class="control-group">
+                       <div class="control-group">
                             @Html.Label("Contact Number", null, new { @class = "control-label form-required" })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.ContactNumber, new { @class = "input-large text-tip", placeholder = "ContactNumber" })
-                                 <span id="spErrorMessageContactNumber" class="error" style="display: none;">* Please
-                                    Enter Your Contact Number</span>
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.ContactNumber)
+                                </p>
                             </div>
                         </div>
-                        <div class="control-group">
-                            @Html.Label("Secondary Contact Number", null, new { @class = "control-label", style = "width:200px;margin-left: -60px;" })
+                        <div class="control-group"> 
+                            @Html.Label("Secondary Contact Number", null, new { @class = "control-label form-required", style = "width:200px;margin-left: -60px;"  })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.SecondaryContactNumber, new { @class = "input-large text-tip", placeholder = "SecondaryContactNumber" })
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.SecondaryContactNumber)
+                                </p>
                             </div>
                         </div>
-                        <div class="control-group">
+                         <div class="control-group">
                             @Html.Label("Email", null, new { @class = "control-label form-required" })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.Email, new { @class = "input-large text-tip", placeholder = "Email" })
-                                 <span id="spErrorMessageEmail" class="error" style="display: none;">* Please Enter
-                                    Your Email</span>
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Email)
+                                </p>
                             </div>
                         </div>
                         <div class="control-group">
-                            @Html.Label("Description", null, new { @class = "control-label" })
+                            @Html.Label("Description", null, new { @class = "control-label form-required" })
                             <div class="controls">
                                 @Html.TextBoxFor(model => model.Description, new { @class = "input-large text-tip", placeholder = "Description" })
+                                <p class="help-block">
+                                    @Html.ValidationMessageFor(model => model.Description)
+                                </p>
                             </div>
                         </div>
-                        <div class="control-group">
-                            <div class="controls"> 
-                                <a type="submit" class="btn btn-primary" id="submit">Save Changes</a>
-                                @Html.Button_DeleteOrCancel("Cancel", "../../Resume")
-                            </div>
-                        </div>
+                            <div class="control-group">
+                <div class="controls">
+                   <input type="submit" class="btn btn-primary" value="Save Changes" />
+             @Html.Button_DeleteOrCancel("Cancel", "../../Resume")
+                </div>
+            </div> 
                     </div>
                 </div>
             </div>
         </div>
-    </div> 
+    </div>
+     
+    
 }
- <script type="text/javascript"> 
-     $(function () {
-         $("a[id*='submit']").click(function (e) {
-             var GivenName = $("input[name='GivenName']").val();
-             var LastName = $("input[name='LastName']").val();
-             var AddressName = $("input[name='Address.Address_Name']").val();
-             var City = $("input[name='Address.City']").val();
-             var State = $("input[name='Address.State']").val();
-             var Zipcode = $("input[name='Address.Zipcode']").val();
-             var Country = $("select[name='Address.Country_Id']").val();
-             var ContactNumber = $("input[name='ContactNumber']").val();
-             var Email = $("input[name='Email']").val();
-             var isValid = true;
-             if (GivenName == "") {
-                 document.getElementById("spErrorMessageGivenName").style.display = 'inline';
-                 isValid = false;
-             }
-             else {
-                 document.getElementById("spErrorMessageGivenName").style.display = 'none';
-             }
-             if (LastName == "") {
-                 document.getElementById("spErrorMessageLastName").style.display = 'inline';
-                 isValid = false;
-             }
-             else {
-                 document.getElementById("spErrorMessageLastName").style.display = 'none';
-             }
-             if (AddressName == "") {
-                 document.getElementById("spErrorMessageAddressName").style.display = 'inline';
-                 isValid = false;
-             }
-             else {
-                 document.getElementById("spErrorMessageAddressName").style.display = 'none';
-             }
-             if (City == "") {
-                 document.getElementById("spErrorMessageCity").style.display = 'inline';
-                 isValid = false;
-             }
-             else {
-                 document.getElementById("spErrorMessageCity").style.display = 'none';
-             }
-             if (State == "") {
-                 document.getElementById("spErrorMessageState").style.display = 'inline';
-                 isValid = false;
-             }
-             else {
-                 document.getElementById("spErrorMessageState").style.display = 'none';
-             }
-             if (Zipcode == "") {
-                 document.getElementById("spErrorMessageZipcode").style.display = 'inline';
-                 isValid = false;
-             }
-             else {
-                 document.getElementById("spErrorMessageZipcode").style.display = 'none';
-             }
-             if (Country == "") {
-                 document.getElementById("spErrorMessageCountry").style.display = 'inline';
-                 isValid = false;
-             }
-             else {
-                 document.getElementById("spErrorMessageCountry").style.display = 'none';
-             }
-             if (ContactNumber == "") {
-                 document.getElementById("spErrorMessageContactNumber").style.display = 'inline';
-                 isValid = false;
-             }
-             else {
-                 document.getElementById("spErrorMessageContactNumber").style.display = 'none';
-             }
-             if (Email == "") {
-                 document.getElementById("spErrorMessageEmail").style.display = 'inline';
-                 isValid = false;
-             }
-             else {
-                 document.getElementById("spErrorMessageEmail").style.display = 'none';
-             }
-             if (isValid == true) {
-                 $("#ResumeForm").submit();
-             }
-             else {
-                 $.pnotify({
-                     title: 'Error',
-                     text: 'Please fix all the errors',
-                     styling: 'bootstrap',
-                     type: 'error'
-                 });
-                 return false;
-             }
-         });
-     });   
-</script>
+ 
