Edited Leave Application

--- a/StormWeb/Views/Leave/Create.cshtml
+++ b/StormWeb/Views/Leave/Create.cshtml
@@ -24,18 +24,18 @@
                         <div class="control-group">
                             @Html.Label("Given Name", null, new { @class = "control-label form-required" })
                             <div class="controls">
-                                @Html.TextBoxFor(model => model.Staff_Id, new { @class = "input-large text-tip", placeholder = " Given Name" })
+                                @Html.TextBoxFor(model => model.StartDate, new { @class = "input-large text-tip", placeholder = " Given Name" })
                                 <p class="help-block">
-                                    @Html.ValidationMessageFor(model => model.Staff_Id)
+                                    @Html.ValidationMessageFor(model => model.StartDate)
                                 </p>
                             </div>
                         </div>
                         <div class="control-group">
                             @Html.Label("Last Name", null, new { @class = "control-label form-required" })
                             <div class="controls">
-                                @Html.TextBoxFor(model => model.Staff_Id, new { @class = "input-large text-tip", placeholder = " Given Name" })
+                                @Html.TextBoxFor(model => model.StartDate, new { @class = "input-large text-tip", placeholder = " Given Name" })
                                 <p class="help-block">
-                                    @Html.ValidationMessageFor(model => model.Staff_Id)
+                                    @Html.ValidationMessageFor(model => model.StartDate)
                                 </p>
                             </div>
                         </div>
