--- a/StormWeb/Views/Leave/Delete.cshtml
+++ b/StormWeb/Views/Leave/Delete.cshtml
@@ -19,9 +19,9 @@
                     <br />
                     <table class="table">
                         <tr>
-                            <th>Staff_Id
+                            <th>StartDate
                             </th>
-                            <td>  @Html.DisplayFor(model => model.Staff_Id)
+                            <td>  @Html.DisplayFor(model => model.StartDate)
                             </td>
                         </tr>
                          <tr>
