--- a/StormWeb/Views/Leave/Details.cshtml
+++ b/StormWeb/Views/Leave/Details.cshtml
@@ -16,10 +16,10 @@
                     <table class="table">
                         <tr>
                             <th>
-                                Staff_Id
+                                StartDate
                             </th>
                             <td>
-                                @Html.DisplayFor(model => model.Staff_Id)
+                                @Html.DisplayFor(model => model.StartDate)
                             </td>
                         </tr>
                         <tr>
